# sirius-cp-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: CNAME  index.html  script.js  style.css
sirius_cf_cli/: __init__.py  api.py  config.py  main.py  scraper.py  submitter.py  templates.py  tester.py
sirius_cses_cli/: __init__.py  api.py  config.py  main.py  scraper.py  submitter.py  templates.py  tester.py
