[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sirius-cp-cli"
version = "0.2.0"
description = "A unified local CLI environment for Codeforces and CSES competitive programming"
authors = [
    { name = "Amine Ait Hamma", email = "amineaithamma2004@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.9"

[project.scripts]
sirius-cf = "sirius_cf_cli.main:app"
sirius-cses = "sirius_cses_cli.main:app"
